--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "openai": "^4.96.0"
+    "openai": "^4.96.0",
+    "cors": "^2.8.5"
   }
 }
